Fixed bug where gap would open up between sections

--- a/src/sass/components/footer/_footer-module-1.scss
+++ b/src/sass/components/footer/_footer-module-1.scss
@@ -76,17 +76,18 @@
 
     &__info {
       position: relative;
+      width: 70%;
     }
 
     &__info,
     &__contact {
       left: auto;
-      width: auto;
       padding-left: 0;
     }
 
     &__contact {
       padding-left: $md;
+      width: 30%;
     }
 
     &__inline-field {
